Fix notices position when <TopBar> is visible
[MAILPOET-2780]

--- a/assets/css/src/components-plugin/_common.scss
+++ b/assets/css/src/components-plugin/_common.scss
@@ -66,7 +66,6 @@ p.sender_email_address_warning:first-child {
 .mailpoet-subscribers-in-plan {
   font-size: 18px;
   margin-bottom: 20px;
-  margin-top: -20px;
 
   .mailpoet-subscribers-in-plan-spacer {
     display: inline-block;
